# FederatedLearning

./: pyproject.toml
pytorchexample/: client_app.py  custom_strategy.py  server_app.py  task.py
